fix responsive on mobile

--- a/src/components/Instructions/Instructions.module.scss
+++ b/src/components/Instructions/Instructions.module.scss
@@ -7,11 +7,6 @@
   color: #505050;
 }
 
-.textarea,
-.textWrapper {
-  width: 483px;
-}
-
 .textarea {
   border: 1px solid #c4c4c4;
   box-sizing: border-box;
@@ -23,7 +18,4 @@
   &:focus {
     border: 1px solid #949494;
   }
-}
-
-.textWrapper {
 }
