--- a/src/components/MarketingSource/MarketingSource.module.scss
+++ b/src/components/MarketingSource/MarketingSource.module.scss
@@ -1,4 +1,5 @@
 .dropdown {
+  max-width: 100%;
   width: 410px;
   height: 40px;
   border: 1px solid #C4C4C4;
