--- a/src/components/Recipient/Recipient.module.scss
+++ b/src/components/Recipient/Recipient.module.scss
@@ -3,7 +3,6 @@
 }
 
 .button {
-  width: 249px;
   height: 48px;
   border: 1px solid #505050;
   box-sizing: border-box;
@@ -37,6 +36,7 @@
 }
 
 .input {
+  max-width: 100%;
   width: 410px;
   height: 40px;
   border: 1px solid #c4c4c4;
