--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,11 +1,13 @@
-.contentWrapper {
-  max-width: 550px;
-}
-
 .divider {
-  max-width: 100%;
+  max-width: 90%;
   width: 625px;
   border: 0.25px solid #c4c4c4;
   margin-top: 50px;
   margin-bottom: 24px;
+}
+
+.contentWrapper {
+  @media (min-width: 768px) {
+    max-width: 550px;
+  }
 }
